added missing fields for smb_files.log

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -1761,13 +1761,55 @@ filter {
     # https://docs.zeek.org/en/stable/scripts/base/protocols/smb/main.zeek.html#type-SMB::FileInfo
     # todo: also smb_cmd.log?
 
-    dissect {
-      id => "dissect_zeek_smb_files"
-      # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
-      mapping => {
-        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][resp_p]}	%{[zeek_cols][fuid]}	%{[zeek_cols][action]}	%{[zeek_cols][path]}	%{[zeek_cols][name]}	%{[zeek_cols][size]}	%{[zeek_cols][prev_name]}	%{[zeek_cols][times_modified]}	%{[zeek_cols][times_accessed]}	%{[zeek_cols][times_created]}	%{[zeek_cols][times_changed]}"
+    if ([@metadata][zeek_fields_bitmap] and [@metadata][zeek_fields_bitmap_version]) {
+
+      # bitmap smb_files.log field configuration version 0
+      #
+      # smb_files.log without data_offset_req, data_len_req, data_len_rsp : 0x0000FFFF / 65535
+      # smb_files.log with data_offset_req, data_len_req, data_len_rsp :    0x0007FFFF / 524287
+
+      # smb_files.log with data_offset_req, data_len_req, data_len_rsp
+
+      if ([@metadata][zeek_fields_bitmap_version] == 0) {
+
+        if ([@metadata][zeek_fields_bitmap] == 524287) {
+
+          dissect {
+            id => "dissect_zeek_smb_files_with_all_fields"
+            # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+            mapping => {
+              "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][resp_p]}	%{[zeek_cols][fuid]}	%{[zeek_cols][action]}	%{[zeek_cols][path]}	%{[zeek_cols][name]}	%{[zeek_cols][size]}	%{[zeek_cols][prev_name]}	%{[zeek_cols][times_modified]}	%{[zeek_cols][times_accessed]}	%{[zeek_cols][times_created]}	%{[zeek_cols][times_changed]}	%{[zeek_cols][data_offset_req]}	%{[zeek_cols][data_len_req]}	%{[zeek_cols][data_len_rsp]}"
+            }
+          }
+
+        } else if ([@metadata][zeek_fields_bitmap] == 65535) {
+
+          dissect {
+            id => "dissect_zeek_smb_files_without_data_lens"
+            # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+            mapping => {
+              "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][resp_p]}	%{[zeek_cols][fuid]}	%{[zeek_cols][action]}	%{[zeek_cols][path]}	%{[zeek_cols][name]}	%{[zeek_cols][size]}	%{[zeek_cols][prev_name]}	%{[zeek_cols][times_modified]}	%{[zeek_cols][times_accessed]}	%{[zeek_cols][times_created]}	%{[zeek_cols][times_changed]}"
+            }
+          }
+
+        } else {
+          # who knows? the smb_files.log preprocessed bitmap is not one we're expecting, we've got to guess and cannot use dissect
+          mutate { id => "mutate_add_tag_dissect_failure_unknown_smb_files_bitmap"
+                   add_tag => [ "_dissectfailure" ] }
+        }
+
+      } else {
+        # who knows? the smb_files.log preprocessed bitmap field list version is not one we're expecting, we've got to guess and cannot use dissect
+        mutate { id => "mutate_add_tag_dissect_failure_unknown_bitmap_smb_files_version"
+                 add_tag => [ "_dissectfailure" ] }
       }
+
+    } else {
+      # who knows? the smb_files.log was not preprocessed to determine fields, we've got to guess and cannot use dissect
+      mutate { id => "mutate_add_tag_dissect_failure_missing_smb_files_bitmap"
+               add_tag => [ "_dissectfailure" ] }
     }
+
     if ("_dissectfailure" in [tags]) {
       mutate {
         id => "mutate_split_zeek_smb_files"
@@ -1776,7 +1818,7 @@ filter {
       }
       ruby {
         id => "ruby_zip_zeek_smb_files"
-        init => "$zeek_smb_files_field_names = [ 'ts', 'uid', 'orig_h', 'orig_p', 'resp_h', 'resp_p', 'fuid', 'action', 'path', 'name', 'size', 'prev_name', 'times_modified', 'times_accessed', 'times_created', 'times_changed' ]"
+        init => "$zeek_smb_files_field_names = [ 'ts', 'uid', 'orig_h', 'orig_p', 'resp_h', 'resp_p', 'fuid', 'action', 'path', 'name', 'size', 'prev_name', 'times_modified', 'times_accessed', 'times_created', 'times_changed', 'data_offset_req', 'data_len_req', 'data_len_rsp' ]"
         code => "event.set('[zeek_cols]', $zeek_smb_files_field_names.zip(event.get('[message]')).to_h)"
       }
     }
@@ -3498,6 +3540,16 @@ filter {
       }
       if ([@metadata][smb_time_cha]) { mutate { id => "mutate_replace_zeek_smb_files_times_changed"
                                          replace => { "[zeek_smb_files][times_changed]" => "%{[@metadata][smb_time_cha]}" } } }
+    }
+
+    dissect {
+      id => "dissect_zeek_smb_files_convert_datatypes"
+      convert_datatype => {
+        "[zeek_smb_files][data_offset_req]" => "int"
+        "[zeek_smb_files][data_len_req]" => "int"
+        "[zeek_smb_files][data_len_rsp]" => "int"
+
+      }
     }
 
   } else if ([source] == "smb_mapping") {
