move a few more convert_datatypes out

--- a/logstash/pipelines/enrichment/12_type_conv.conf
+++ b/logstash/pipelines/enrichment/12_type_conv.conf
@@ -9,6 +9,7 @@ filter {
       "[dhcp][hostCnt]" => "int"
       "[dhcp][idCnt]" => "int"
       "[dhcp][macCnt]" => "int"
+      "[dhcp][ouiCnt]" => "int"
       "[dns][hostCnt]" => "int"
       "[dns][ipCnt]" => "int"
       "[dns][opcodeCnt]" => "int"
@@ -17,6 +18,7 @@ filter {
       "[dstBytes]" => "int"
       "[dstDataBytes]" => "int"
       "[dstMacCnt]" => "int"
+      "[dstOuiCnt]" => "int"
       "[dstPackets]" => "int"
       "[dstPort]" => "int"
       "[email][dstCnt]" => "int"
@@ -50,6 +52,7 @@ filter {
       "[srcBytes]" => "int"
       "[srcDataBytes]" => "int"
       "[srcMacCnt]" => "int"
+      "[srcOuiCnt]" => "int"
       "[srcPackets]" => "int"
       "[srcPort]" => "int"
       "[ssh][hasshCnt]" => "int"
@@ -65,8 +68,8 @@ filter {
       "[totDataBytes]" => "int"
       "[totPackets]" => "int"
       "[userCnt]" => "int"
-      "[vlanCnt]" => "int"
       "[vlan]" => "int"
+      "[vlanCnt]" => "int"
     }
   }
 
