use mutate instead of dissect in pipelines for integer/float conversion

--- a/logstash/pipelines/enrichment/12_type_conv.conf
+++ b/logstash/pipelines/enrichment/12_type_conv.conf
@@ -2,74 +2,74 @@ filter {
 
   # set data types for fields that belong to multiple types of logs
   # _dataconversion tag (for missing fields) will be removed in 18_tags_finalize.conf
-  dissect {
-    id => "dissect_convert_datatype_misc"
-    convert_datatype => {
-      "[certCnt]" => "int"
-      "[dhcp][hostCnt]" => "int"
-      "[dhcp][idCnt]" => "int"
-      "[dhcp][macCnt]" => "int"
-      "[dhcp][ouiCnt]" => "int"
-      "[dns][hostCnt]" => "int"
-      "[dns][ipCnt]" => "int"
-      "[dns][opcodeCnt]" => "int"
-      "[dns][qcCnt]" => "int"
-      "[dns][qtCnt]" => "int"
-      "[dstBytes]" => "int"
-      "[dstDataBytes]" => "int"
-      "[dstMacCnt]" => "int"
-      "[dstOuiCnt]" => "int"
-      "[dstPackets]" => "int"
-      "[dstPort]" => "int"
-      "[email][dstCnt]" => "int"
-      "[email][idCnt]" => "int"
-      "[email][srcCnt]" => "int"
-      "[email][subjectCnt]" => "int"
-      "[email][useragentCnt]" => "int"
-      "[firstPacket]" => "int"
-      "[http][bodyMagicCnt]" => "int"
-      "[http][clientVersionCnt]" => "int"
-      "[http][hostCnt]" => "int"
-      "[http][methodCnt]" => "int"
-      "[http][statuscodeCnt]" => "int"
-      "[http][uriCnt]" => "int"
-      "[http][useragentCnt]" => "int"
-      "[ipProtocol]" => "int"
-      "[irc][channelCnt]" => "int"
-      "[irc][nickCnt]" => "int"
-      "[krb5][cnameCnt]" => "int"
-      "[krb5][snameCnt]" => "int"
-      "[lastPacket]" => "int"
-      "[length]" => "int"
-      "[protocolCnt]" => "int"
-      "[quic][hostCnt]" => "int"
-      "[quic][useragentCnt]" => "int"
-      "[quic][versionCnt]" => "int"
-      "[radius][endpointIpCnt]" => "int"
-      "[radius][framedIpCnt]" => "int"
-      "[radius][macCnt]" => "int"
-      "[segmentCnt]" => "int"
-      "[srcBytes]" => "int"
-      "[srcDataBytes]" => "int"
-      "[srcMacCnt]" => "int"
-      "[srcOuiCnt]" => "int"
-      "[srcPackets]" => "int"
-      "[srcPort]" => "int"
-      "[ssh][hasshCnt]" => "int"
-      "[ssh][hasshServerCnt]" => "int"
-      "[ssh][keyCnt]" => "int"
-      "[ssh][versionCnt]" => "int"
-      "[timestamp]" => "int"
-      "[tls][cipherCnt]" => "int"
-      "[tls][ja3Cnt]" => "int"
-      "[tls][ja3sCnt]" => "int"
-      "[tls][versionCnt]" => "int"
-      "[totBytes]" => "int"
-      "[totDataBytes]" => "int"
-      "[totPackets]" => "int"
-      "[userCnt]" => "int"
-      "[vlan]" => "int"
-      "[vlanCnt]" => "int"
+  mutate {
+    id => "mutate_convert_misc"
+    convert => {
+      "[certCnt]" => "integer"
+      "[dhcp][hostCnt]" => "integer"
+      "[dhcp][idCnt]" => "integer"
+      "[dhcp][macCnt]" => "integer"
+      "[dhcp][ouiCnt]" => "integer"
+      "[dns][hostCnt]" => "integer"
+      "[dns][ipCnt]" => "integer"
+      "[dns][opcodeCnt]" => "integer"
+      "[dns][qcCnt]" => "integer"
+      "[dns][qtCnt]" => "integer"
+      "[dstBytes]" => "integer"
+      "[dstDataBytes]" => "integer"
+      "[dstMacCnt]" => "integer"
+      "[dstOuiCnt]" => "integer"
+      "[dstPackets]" => "integer"
+      "[dstPort]" => "integer"
+      "[email][dstCnt]" => "integer"
+      "[email][idCnt]" => "integer"
+      "[email][srcCnt]" => "integer"
+      "[email][subjectCnt]" => "integer"
+      "[email][useragentCnt]" => "integer"
+      "[firstPacket]" => "integer"
+      "[http][bodyMagicCnt]" => "integer"
+      "[http][clientVersionCnt]" => "integer"
+      "[http][hostCnt]" => "integer"
+      "[http][methodCnt]" => "integer"
+      "[http][statuscodeCnt]" => "integer"
+      "[http][uriCnt]" => "integer"
+      "[http][useragentCnt]" => "integer"
+      "[ipProtocol]" => "integer"
+      "[irc][channelCnt]" => "integer"
+      "[irc][nickCnt]" => "integer"
+      "[krb5][cnameCnt]" => "integer"
+      "[krb5][snameCnt]" => "integer"
+      "[lastPacket]" => "integer"
+      "[length]" => "integer"
+      "[protocolCnt]" => "integer"
+      "[quic][hostCnt]" => "integer"
+      "[quic][useragentCnt]" => "integer"
+      "[quic][versionCnt]" => "integer"
+      "[radius][endpointegerIpCnt]" => "integer"
+      "[radius][framedIpCnt]" => "integer"
+      "[radius][macCnt]" => "integer"
+      "[segmentCnt]" => "integer"
+      "[srcBytes]" => "integer"
+      "[srcDataBytes]" => "integer"
+      "[srcMacCnt]" => "integer"
+      "[srcOuiCnt]" => "integer"
+      "[srcPackets]" => "integer"
+      "[srcPort]" => "integer"
+      "[ssh][hasshCnt]" => "integer"
+      "[ssh][hasshServerCnt]" => "integer"
+      "[ssh][keyCnt]" => "integer"
+      "[ssh][versionCnt]" => "integer"
+      "[timestamp]" => "integer"
+      "[tls][cipherCnt]" => "integer"
+      "[tls][ja3Cnt]" => "integer"
+      "[tls][ja3sCnt]" => "integer"
+      "[tls][versionCnt]" => "integer"
+      "[totBytes]" => "integer"
+      "[totDataBytes]" => "integer"
+      "[totPackets]" => "integer"
+      "[userCnt]" => "integer"
+      "[vlan]" => "integer"
+      "[vlanCnt]" => "integer"
     }
   }
 
