--- a/logstash/pipelines/enrichment/18_tags_finalize.conf
+++ b/logstash/pipelines/enrichment/18_tags_finalize.conf
@@ -12,8 +12,8 @@ filter {
   # deduplicate tags
 
   ruby {
-    id => "ruby_enrichment_tags_clean_and_deduplicate"
-    code => "event.set('[tags]', event.get('[tags]').select{|i| !(i.start_with?('_dataconversion'))}.uniq)"
+    id => "ruby_zeek_tags_deduplicate"
+    code => "event.set('[tags]', event.get('[tags]').uniq)"
   }
 
   # count tags (for moloch)
@@ -22,9 +22,9 @@ filter {
     id => "ruby_enrichment_tagsCnt"
     code => "event.set('[tagsCnt]', event.get('[tags]').length)"
   }
-  dissect {
-    id => "dissect_convert_datatype_enrichment_tagsCnt"
-    convert_datatype => { "[tagsCnt]" => "int" }
+  mutate {
+    id => "mutate_convert_enrichment_tagsCnt"
+    convert => { "[tagsCnt]" => "integer" }
   }
 
 } # filter
