--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -3119,11 +3119,11 @@ filter {
       }
     }
 
-    dissect {
-      id => "dissect_zeek_ldap_convert_datatypes"
-      convert_datatype => {
-        "[zeek_ldap][message_id]" => "int"
-        "[zeek_ldap][result_code]" => "int"
+    mutate {
+      id => "mutate_zeek_ldap_convert"
+      convert => {
+        "[zeek_ldap][message_id]" => "integer"
+        "[zeek_ldap][result_code]" => "integer"
       }
     }
 
@@ -3131,12 +3131,12 @@ filter {
     #############################################################################################################################
     # modbus_register_change.log specific logic
 
-    dissect {
-      id => "dissect_zeek_modbus_register_change_convert_datatypes"
-      convert_datatype => {
-        "[zeek_modbus_register_change][register]" => "int"
-        "[zeek_modbus_register_change][old_val]" => "int"
-        "[zeek_modbus_register_change][new_val]" => "int"
+    mutate {
+      id => "mutate_zeek_modbus_register_change_convert"
+      convert => {
+        "[zeek_modbus_register_change][register]" => "integer"
+        "[zeek_modbus_register_change][old_val]" => "integer"
+        "[zeek_modbus_register_change][new_val]" => "integer"
         "[zeek_modbus_register_change][delta]" => "float"
       }
     }
@@ -3145,10 +3145,10 @@ filter {
     #############################################################################################################################
     # mqtt_publish.log specific logic
 
-    dissect {
-      id => "dissect_zeek_mqtt_publish_convert_payload_len_datatype"
-      convert_datatype => {
-        "[zeek_mqtt_publish][payload_len]" => "int"
+    mutate {
+      id => "mutate_zeek_mqtt_publish_convert_payload_len"
+      convert => {
+        "[zeek_mqtt_publish][payload_len]" => "integer"
       }
     }
 
@@ -3160,11 +3160,11 @@ filter {
              split => { "[zeek_mqtt_subscribe][topics]" => ","
                         "[zeek_mqtt_subscribe][qos_levels]" => "," } }
 
-    dissect {
-      id => "dissect_zeek_mqtt_subscribe_convert_field_datatypes"
-      convert_datatype => {
-        "[zeek_mqtt_subscribe][qos_levels]" => "int"
-        "[zeek_mqtt_subscribe][granted_qos_level]" => "int"
+    mutate {
+      id => "mutate_zeek_mqtt_subscribe_convert_field"
+      convert => {
+        "[zeek_mqtt_subscribe][qos_levels]" => "integer"
+        "[zeek_mqtt_subscribe][granted_qos_level]" => "integer"
       }
     }
 
@@ -3267,16 +3267,16 @@ filter {
     }
 
     # convert various data types
-    dissect {
-      id => "dissect_convert_datatype_zeek_ntp"
-      convert_datatype => {
-        "[zeek_ntp][mode]" => "int"
+    mutate {
+      id => "mutate_convert_zeek_ntp"
+      convert => {
+        "[zeek_ntp][mode]" => "integer"
         "[zeek_ntp][num_exts]" => "float"
         "[zeek_ntp][poll]" => "float"
         "[zeek_ntp][precision]" => "float"
         "[zeek_ntp][root_delay]" => "float"
         "[zeek_ntp][root_disp]" => "float"
-        "[zeek_ntp][version]" => "int"
+        "[zeek_ntp][version]" => "integer"
       }
     }
 
@@ -3378,10 +3378,10 @@ filter {
                split => { "[zeek_s7comm][data_info]" => "," } }
     }
 
-    dissect {
-      id => "dissect_convert_datatype_zeek_s7comm_item_count"
-      convert_datatype => {
-        "[zeek_s7comm][item_count]" => "int"
+    mutate {
+      id => "mutate_convert_zeek_s7comm_item_count"
+      convert => {
+        "[zeek_s7comm][item_count]" => "integer"
       }
     }
 
@@ -3428,20 +3428,20 @@ filter {
 
     # signature_count is the number of hits
     if ([zeek_signatures][signature_count]) {
-      dissect {
-        id => "dissect_convert_datatype_zeek_signatures_signature_count"
-        convert_datatype => {
-          "[zeek_signatures][signature_count]" => "int"
+      mutate {
+        id => "mutate_convert_zeek_signatures_signature_count"
+        convert => {
+          "[zeek_signatures][signature_count]" => "integer"
         }
       }
     }
 
     # signature_count is the number of engines which scanned the file
     if ([zeek_signatures][host_count]) {
-      dissect {
-        id => "dissect_convert_datatype_zeek_signatures_host_count"
-        convert_datatype => {
-          "[zeek_signatures][host_count]" => "int"
+      mutate {
+        id => "mutate_convert_zeek_signatures_host_count"
+        convert => {
+          "[zeek_signatures][host_count]" => "integer"
         }
       }
     }
@@ -3542,12 +3542,12 @@ filter {
                                          replace => { "[zeek_smb_files][times_changed]" => "%{[@metadata][smb_time_cha]}" } } }
     }
 
-    dissect {
-      id => "dissect_zeek_smb_files_convert_datatypes"
-      convert_datatype => {
-        "[zeek_smb_files][data_offset_req]" => "int"
-        "[zeek_smb_files][data_len_req]" => "int"
-        "[zeek_smb_files][data_len_rsp]" => "int"
+    mutate {
+      id => "mutate_zeek_smb_files_convert"
+      convert => {
+        "[zeek_smb_files][data_offset_req]" => "integer"
+        "[zeek_smb_files][data_len_req]" => "integer"
+        "[zeek_smb_files][data_len_rsp]" => "integer"
 
       }
     }
@@ -4003,11 +4003,11 @@ filter {
                  event.set('[@metadata][cert][notAfter]', (1000*event.get('[zeek_x509][certificate_not_valid_after]').to_f).round(0))
                  event.set('[@metadata][cert][validDays]', ((event.get('[zeek_x509][certificate_not_valid_after]').to_f - event.get('[zeek_x509][certificate_not_valid_before]').to_f)/(24.0*60.0*60.0)).round(0))"
       }
-      dissect {
-        id => "dissect_convert_datatype_zeek_x509_time_range"
-        convert_datatype => {
-          "[@metadata][cert][notBefore]" => "int"
-          "[@metadata][cert][notAfter]" => "int"
+      mutate {
+        id => "mutate_convert_zeek_x509_time_range"
+        convert => {
+          "[@metadata][cert][notBefore]" => "integer"
+          "[@metadata][cert][notAfter]" => "integer"
           "[@metadata][cert][validDays]" => "float"
         }
       }
@@ -4079,12 +4079,12 @@ filter {
   }
 
   # set data types for fields that belong to various zeek logs
-  dissect {
-    id => "dissect_convert_datatype_zeek_misc"
-    convert_datatype => {
-      "[zeek][fuidCnt]" => "int"
-      "[zeek][filenameCnt]" => "int"
-      "[zeek][filetypeCnt]" => "int"
+  mutate {
+    id => "mutate_convert_zeek_misc"
+    convert => {
+      "[zeek][fuidCnt]" => "integer"
+      "[zeek][filenameCnt]" => "integer"
+      "[zeek][filetypeCnt]" => "integer"
     }
   }
 
