still WIP, but replaced pcap processing pipeline for zeek and moloch with a more extensible one that is also more parallel (see issue #80 and issue #78)

--- a/moloch/supervisord.conf
+++ b/moloch/supervisord.conf
@@ -75,12 +75,12 @@ redirect_stderr=true
 
 [program:pcap-publisher]
 command=python3 /data/pcap_watcher.py
-  --verbose false
-  --extra-verbose false
+  --verbose "%(ENV_PCAP_PIPELINE_DEBUG)s"
+  --extra-verbose "%(ENV_PCAP_PIPELINE_DEBUG_EXTRA)s"
   --elasticsearch "%(ENV_MOLOCH_ELASTICSEARCH)s"
   --elasticsearch-wait
   --moloch-node moloch
-  --ignore-existing true
+  --ignore-existing false
   --start-sleep 60
   --directory /data/pcap/processed
 user=%(ENV_MOLOCHUSER)s
@@ -95,8 +95,8 @@ redirect_stderr=true
 
 [program:pcap-moloch]
 command=python3 /data/pcap_moloch_processor.py
-  --verbose false
-  --extra-verbose false
+  --verbose "%(ENV_PCAP_PIPELINE_DEBUG)s"
+  --extra-verbose "%(ENV_PCAP_PIPELINE_DEBUG_EXTRA)s"
   --start-sleep 10
   --threads %(ENV_MOLOCH_ANALYZE_PCAP_THREADS)s
   --moloch /data/moloch/bin/moloch-capture
@@ -114,8 +114,8 @@ redirect_stderr=true
 
 [program:pcap-zeek]
 command=python3 /data/pcap_zeek_processor.py
-  --verbose false
-  --extra-verbose false
+  --verbose "%(ENV_PCAP_PIPELINE_DEBUG)s"
+  --extra-verbose "%(ENV_PCAP_PIPELINE_DEBUG_EXTRA)s"
   --start-sleep 10
   --threads %(ENV_ZEEK_AUTO_ANALYZE_PCAP_THREADS)s
   --zeek /opt/zeek/bin/zeek
