redirect /upload/ to upload script (so you don't have to remember port :8443). /upload/ works, but /upload doesn't, sometimes nginx proxy stuff confuses me

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -57,8 +57,7 @@ http {
 
   # htadmin (htpasswd/user management)
   server {
-    listen 488;
-    ssl on;
+    listen 488 ssl;
     ssl_certificate /etc/nginx/certs/cert.pem;
     ssl_certificate_key /etc/nginx/certs/key.pem;
 
@@ -71,8 +70,7 @@ http {
 
   # Moloch interface
   server {
-    listen 443;
-    ssl on;
+    listen 443 ssl;
     ssl_certificate /etc/nginx/certs/cert.pem;
     ssl_certificate_key /etc/nginx/certs/key.pem;
     auth_basic "Authentication Required";
@@ -83,6 +81,14 @@ http {
       proxy_pass http://docker-malcolm-readme/README.html;
       proxy_redirect off;
       proxy_set_header Host moloch.malcolm.local;
+    }
+
+    # Malcolm file upload
+    location /upload {
+      proxy_pass http://docker-upload;
+      proxy_redirect off;
+      proxy_set_header Host upload.malcolm.local;
+      client_max_body_size 20G;
     }
 
     # Logstash statistics
@@ -166,8 +172,7 @@ http {
 
   # Upload interface
   server {
-    listen 8443;
-    ssl on;
+    listen 8443 ssl;
     ssl_certificate /etc/nginx/certs/cert.pem;
     ssl_certificate_key /etc/nginx/certs/key.pem;
     auth_basic "Authentication Required";
@@ -187,8 +192,7 @@ http {
 
   # Kibana interface
   server {
-    listen 5601;
-    ssl on;
+    listen 5601 ssl;
     ssl_certificate /etc/nginx/certs/cert.pem;
     ssl_certificate_key /etc/nginx/certs/key.pem;
     auth_basic "Authentication Required";
@@ -217,7 +221,6 @@ http {
   # Kibana offline map server
   server {
     listen 28991;
-    ssl off;
 
     location = /favicon.ico {
       alias /etc/nginx/favicon.ico;
@@ -232,8 +235,7 @@ http {
 
   # Elasticsearch API
   server {
-    listen 9200;
-    ssl on;
+    listen 9200 ssl;
     ssl_certificate /etc/nginx/certs/cert.pem;
     ssl_certificate_key /etc/nginx/certs/key.pem;
     auth_basic "Authentication Required";
@@ -252,8 +254,7 @@ http {
 
   # Elastalert API
   server {
-    listen 3030;
-    ssl on;
+    listen 3030 ssl;
     ssl_certificate /etc/nginx/certs/cert.pem;
     ssl_certificate_key /etc/nginx/certs/key.pem;
     auth_basic "Authentication Required";
