--- a/logstash/pipelines/enrichment/18_tags_finalize.conf
+++ b/logstash/pipelines/enrichment/18_tags_finalize.conf
@@ -2,7 +2,7 @@ filter {
 
   # remove tags we'd rather not see
 
-  mutate { id => "mutate_zeek_tags_remove"
+  mutate { id => "mutate_enrichment_tags_remove"
            remove_tag => [ "beats_input_codec_plain_applied",
                            "_grokparsefailure",
                            "_dissectfailure",
@@ -12,19 +12,19 @@ filter {
   # deduplicate tags
 
   ruby {
-    id => "ruby_zeek_tags_clean_and_deduplicate"
-    code => "event.set('[tags]', event.get('[tags]').select{|i| !(i.start_with?('_dataconversion'))}.uniq)"
+    id => "ruby_zeek_tags_deduplicate"
+    code => "event.set('[tags]', event.get('[tags]').uniq)"
   }
 
   # count tags (for moloch)
 
   ruby {
-    id => "ruby_zeek_tagsCnt"
+    id => "ruby_enrichment_tagsCnt"
     code => "event.set('[tagsCnt]', event.get('[tags]').length)"
   }
-  dissect {
-    id => "dissect_convert_datatype_zeek_tagsCnt"
-    convert_datatype => { "[tagsCnt]" => "int" }
+  mutate {
+    id => "mutate_convert_enrichment_tagsCnt"
+    convert => { "[tagsCnt]" => "integer" }
   }
 
 } # filter
