--- a/moloch/supervisord.conf
+++ b/moloch/supervisord.conf
@@ -73,11 +73,62 @@ stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
 
-[program:cron]
-autorestart=false
-command=/data/cron_env_deb.sh
+[program:pcap-publisher]
+command=python3 /data/pcap_watcher.py
+  --verbose "%(ENV_PCAP_PIPELINE_DEBUG)s"
+  --extra-verbose "%(ENV_PCAP_PIPELINE_DEBUG_EXTRA)s"
+  --elasticsearch "%(ENV_MOLOCH_ELASTICSEARCH)s"
+  --elasticsearch-wait
+  --moloch-node moloch
+  --ignore-existing false
+  --start-sleep 60
+  --directory /data/pcap/processed
+user=%(ENV_MOLOCHUSER)s
+startsecs=65
+startretries=1
 stopasgroup=true
 killasgroup=true
+directory=%(ENV_MOLOCHDIR)s
+stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=0
+redirect_stderr=true
+
+[program:pcap-moloch]
+command=python3 /data/pcap_moloch_processor.py
+  --verbose "%(ENV_PCAP_PIPELINE_DEBUG)s"
+  --extra-verbose "%(ENV_PCAP_PIPELINE_DEBUG_EXTRA)s"
+  --start-sleep 10
+  --threads %(ENV_MOLOCH_ANALYZE_PCAP_THREADS)s
+  --moloch /data/moloch/bin/moloch-capture
+  --autotag "%(ENV_AUTO_TAG)s"
+  --managed "%(ENV_MANAGE_PCAP_FILES)s"
+user=%(ENV_MOLOCHUSER)s
+startsecs=15
+startretries=1
+stopasgroup=true
+killasgroup=true
+directory=%(ENV_MOLOCHDIR)s
+stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=0
+redirect_stderr=true
+
+[program:pcap-zeek]
+command=python3 /data/pcap_zeek_processor.py
+  --verbose "%(ENV_PCAP_PIPELINE_DEBUG)s"
+  --extra-verbose "%(ENV_PCAP_PIPELINE_DEBUG_EXTRA)s"
+  --start-sleep 10
+  --threads %(ENV_ZEEK_AUTO_ANALYZE_PCAP_THREADS)s
+  --zeek /opt/zeek/bin/zeek
+  --autotag "%(ENV_AUTO_TAG)s"
+  --autozeek "%(ENV_ZEEK_AUTO_ANALYZE_PCAP_FILES)s"
+  --extract "%(ENV_ZEEK_EXTRACTOR_MODE)s"
+  --zeek-directory /data/zeek/upload
+user=%(ENV_MOLOCHUSER)s
+startsecs=15
+startretries=1
+stopasgroup=true
+killasgroup=true
+directory=%(ENV_MOLOCHDIR)s
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
