--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -249,6 +249,7 @@ services:
       VIRTUAL_HOST : 'moloch.malcolm.local'
       ES_HOST : 'elasticsearch'
       ES_PORT : 9200
+      PCAP_MONITOR_HOST : 'pcap-monitor'
       VIEWER : 'on'
       WISE : 'on'
     ulimits:
@@ -261,7 +262,6 @@ services:
       - 8000
       - 8005
       - 8081
-      - 30441
     volumes:
       - ./pcap:/data/pcap
       - ./zeek-logs/upload:/data/zeek/upload
@@ -305,6 +305,23 @@ services:
       << : *pcap-capture-variables
     volumes:
       - ./pcap/upload:/pcap
+  pcap-monitor:
+    build:
+      context: .
+      dockerfile: Dockerfiles/pcap-monitor.Dockerfile
+    image: malcolmnetsec/pcap-monitor:1.7.1
+    restart: "no"
+    hostname: pcapmon
+    environment:
+      << : *common-upload-variables
+      ELASTICSEARCH_URL : 'http://elasticsearch:9200'
+    depends_on:
+      - elasticsearch
+    expose:
+      - 30441
+    volumes:
+      - ./zeek-logs:/zeek
+      - ./pcap:/pcap
   upload:
     build:
       context: .
