--- a/moloch/supervisord.conf
+++ b/moloch/supervisord.conf
@@ -51,43 +51,14 @@ stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
 
-[program:watch-upload]
-command=/bin/bash -c "sleep 30 && /data/moloch-watch-pcap-uploads-folder.sh"
-startsecs=35
-startretries=1
-stopasgroup=true
-killasgroup=true
-directory=%(ENV_MOLOCHDIR)s
-stdout_logfile=/dev/fd/1
-stdout_logfile_maxbytes=0
-redirect_stderr=true
-
-[program:pcap-publisher]
-command=python3 /data/pcap_watcher.py
-  --verbose "%(ENV_PCAP_PIPELINE_DEBUG)s"
-  --extra-verbose "%(ENV_PCAP_PIPELINE_DEBUG_EXTRA)s"
-  --elasticsearch "%(ENV_MOLOCH_ELASTICSEARCH)s"
-  --elasticsearch-wait
-  --moloch-node moloch
-  --ignore-existing false
-  --start-sleep 60
-  --directory /data/pcap/processed
-user=%(ENV_MOLOCHUSER)s
-startsecs=65
-startretries=1
-stopasgroup=true
-killasgroup=true
-directory=%(ENV_MOLOCHDIR)s
-stdout_logfile=/dev/fd/1
-stdout_logfile_maxbytes=0
-redirect_stderr=true
-
 [program:pcap-moloch]
 command=python3 /data/pcap_moloch_processor.py
   --verbose "%(ENV_PCAP_PIPELINE_DEBUG)s"
   --extra-verbose "%(ENV_PCAP_PIPELINE_DEBUG_EXTRA)s"
   --start-sleep 10
   --threads %(ENV_MOLOCH_ANALYZE_PCAP_THREADS)s
+  --publisher "%(ENV_PCAP_MONITOR_HOST)s"
+  --pcap-directory /data/pcap/processed
   --moloch /data/moloch/bin/moloch-capture
   --autotag "%(ENV_AUTO_TAG)s"
   --managed "%(ENV_MANAGE_PCAP_FILES)s"
@@ -107,6 +78,8 @@ command=python3 /data/pcap_zeek_processor.py
   --extra-verbose "%(ENV_PCAP_PIPELINE_DEBUG_EXTRA)s"
   --start-sleep 10
   --threads %(ENV_ZEEK_AUTO_ANALYZE_PCAP_THREADS)s
+  --publisher "%(ENV_PCAP_MONITOR_HOST)s"
+  --pcap-directory /data/pcap/processed
   --zeek /opt/zeek/bin/zeek
   --autotag "%(ENV_AUTO_TAG)s"
   --autozeek "%(ENV_ZEEK_AUTO_ANALYZE_PCAP_FILES)s"
