make sure things run as the right users in new containers

--- a/moloch/etc/config.ini
+++ b/moloch/etc/config.ini
@@ -26,8 +26,8 @@ geoLite2Country=/data/moloch/etc/GeoLite2-Country.mmdb
 geoLite2ASN=/data/moloch/etc/GeoLite2-ASN.mmdb
 rirFile=/data/moloch/etc/ipv4-address-space.csv
 ouiFile=/data/moloch/etc/oui.txt
-dropUser=nobody
-dropGroup=daemon
+dropUser=moloch
+dropGroup=moloch
 # implicit auto-creation of users for Moloch (see https://github.com/aol/moloch/pull/1120)
 # The userAutoCreateTmpl should more or less match what's in /etc/user_settings.json
 #    which is what's used when creating the default admin user.
