fix missing geoip section ids

--- a/logstash/pipelines/enrichment/11_lookups.conf
+++ b/logstash/pipelines/enrichment/11_lookups.conf
@@ -233,6 +233,7 @@ filter {
     # if this is a Radius record with IP addresses, GeoIP them as well
     if ([radius][framedIp]) and ([radius][framedIp][0]) {
       geoip {
+        id => "geoip_radius_framedIp_asn"
         default_database_type => "ASN"
         source => "[radius][framedIp][0]"
         target => "[@metadata][radius_asn]"
@@ -245,6 +246,7 @@ filter {
                  merge => { "[radius][framedASN]" => "[@metadata][asn_str]" } }
       }
       geoip {
+        id => "geoip_radius_framedIp_geo"
         source => "[radius][framedIp][0]"
         target => "[@metadata][radius_geo]"
       }
@@ -256,6 +258,7 @@ filter {
 
     if ([radius][endpointIp]) and ([radius][endpointIp][0]) {
       geoip {
+        id => "geoip_radius_endpointIp_asn"
         default_database_type => "ASN"
         source => "[radius][endpointIp][0]"
         target => "[@metadata][radius_asn]"
@@ -269,6 +272,7 @@ filter {
       }
 
       geoip {
+        id => "geoip_radius_endpointIp_geo"
         source => "[radius][endpointIp][0]"
         target => "[@metadata][radius_geo]"
       }
