Allow the ability to specify PCAP_PIPELINE_IGNORE_PREEXISTING in order to check and (if needed) reprocess PCAP files that didn't get finished before shutdown. Default is 'false' which meants to do the check, 'true' means ignore anything in there before the container starts

--- a/docker-compose-standalone-zeek-live.yml
+++ b/docker-compose-standalone-zeek-live.yml
@@ -60,6 +60,7 @@ x-common-upload-variables: &common-upload-variables
   AUTO_TAG : 'true'
   PCAP_PIPELINE_DEBUG : 'false'
   PCAP_PIPELINE_DEBUG_EXTRA : 'false'
+  PCAP_PIPELINE_IGNORE_PREEXISTING : 'false'
   PCAP_MONITOR_HOST : 'pcap-monitor'
 
 x-common-beats-variables: &common-beats-variables
