--- a/pcap-monitor/supervisord.conf
+++ b/pcap-monitor/supervisord.conf
@@ -33,7 +33,7 @@ command=python3 /usr/local/bin/pcap_watcher.py
   --elasticsearch "%(ENV_ELASTICSEARCH_URL)s"
   --elasticsearch-wait
   --moloch-node moloch
-  --ignore-existing false
+  --ignore-existing "%(ENV_PCAP_PIPELINE_IGNORE_PREEXISTING)s"
   --start-sleep 60
   --directory "%(ENV_PCAP_PATH)s"/processed
 user=%(ENV_MONITOR_USER)s
