enable readTruncatedPackets for moloch's config.ini to handle more pcaps; also, map zeek_smtp.helo to Moloch's new email.smtpHello field

--- a/logstash/pipelines/enrichment/12_type_conv.conf
+++ b/logstash/pipelines/enrichment/12_type_conv.conf
@@ -26,6 +26,7 @@ filter {
       "[email][srcCnt]" => "integer"
       "[email][subjectCnt]" => "integer"
       "[email][useragentCnt]" => "integer"
+      "[email][smtpHelloCnt]" => "integer"
       "[firstPacket]" => "integer"
       "[http][bodyMagicCnt]" => "integer"
       "[http][clientVersionCnt]" => "integer"
