--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -3641,6 +3641,12 @@ filter {
                                    merge => { "[email][dst]" => "[zeek_smtp][cc]" } } }
     if ([zeek_smtp][rcptto]) { mutate { id => "mutate_merge_zeek_dst_from_rcptto"
                                        merge => { "[email][dst]" => "[zeek_smtp][rcptto]" } } }
+    if ([zeek_smtp][helo]) {
+      mutate { id => "mutate_merge_zeek_smtp_helo"
+               merge => { "[email][smtpHello]" => "[zeek_smtp][helo]" } }
+      mutate { id => "mutate_merge_add_field_zeek_smtp_helo_cnt"
+               add_field => { "[email][smtpHelloCnt]" => "1" } }
+    }
     if ([email][dst]) {
       # mutate { id => "mutate_gsub_zeek_dst"
       #          gsub => [ "[email][dst]", "(^<|>$)", "" ] }
