--- a/moloch/etc/config.ini
+++ b/moloch/etc/config.ini
@@ -13,6 +13,7 @@ interface=eth0
 wiseHost=127.0.0.1
 wisePort=8081
 pcapDir=/data/moloch/raw
+readTruncatedPackets=true
 maxFileSizeG=12
 tcpTimeout=600
 tcpSaveTimeout=720
