based on the NGINX_LDAP_AUTH environment variable, enable ldap vs. basic authentication in nginx

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 /filebeat/certs
 /nginx/certs
 /nginx/htpasswd
+/nginx/nginx_ldap.conf
 /htadmin/config.ini
 /htadmin/metadata
 /elastalert/config/smtp-auth.yaml
