--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -19,6 +19,9 @@ http {
   proxy_buffers 4 256k;
   proxy_busy_buffers_size 256k;
 
+  # if LDAP authentication is enabled, this will configure the ldap_server section
+  include /etc/nginx/nginx_ldap_rt.conf;
+
   upstream docker-moloch {
     server moloch:8005;
   }
@@ -73,8 +76,9 @@ http {
     listen 443 ssl;
     ssl_certificate /etc/nginx/certs/cert.pem;
     ssl_certificate_key /etc/nginx/certs/key.pem;
-    auth_basic "Authentication Required";
-    auth_basic_user_file /etc/nginx/.htpasswd;
+
+    # use either auth_basic or auth_ldap
+    include /etc/nginx/nginx_auth_rt.conf;
 
     # Malcolm readme
     location /readme {
@@ -175,8 +179,9 @@ http {
     listen 8443 ssl;
     ssl_certificate /etc/nginx/certs/cert.pem;
     ssl_certificate_key /etc/nginx/certs/key.pem;
-    auth_basic "Authentication Required";
-    auth_basic_user_file /etc/nginx/.htpasswd;
+
+    # use either auth_basic or auth_ldap
+    include /etc/nginx/nginx_auth_rt.conf;
 
     location = /favicon.ico {
       alias /etc/nginx/favicon.ico;
@@ -195,8 +200,9 @@ http {
     listen 5601 ssl;
     ssl_certificate /etc/nginx/certs/cert.pem;
     ssl_certificate_key /etc/nginx/certs/key.pem;
-    auth_basic "Authentication Required";
-    auth_basic_user_file /etc/nginx/.htpasswd;
+
+    # use either auth_basic or auth_ldap
+    include /etc/nginx/nginx_auth_rt.conf;
 
     location = /favicon.ico {
       alias /etc/nginx/favicon.ico;
@@ -238,8 +244,9 @@ http {
     listen 9200 ssl;
     ssl_certificate /etc/nginx/certs/cert.pem;
     ssl_certificate_key /etc/nginx/certs/key.pem;
-    auth_basic "Authentication Required";
-    auth_basic_user_file /etc/nginx/.htpasswd;
+
+    # use either auth_basic or auth_ldap
+    include /etc/nginx/nginx_auth_rt.conf;
 
     location = /favicon.ico {
       alias /etc/nginx/favicon.ico;
@@ -257,8 +264,9 @@ http {
     listen 3030 ssl;
     ssl_certificate /etc/nginx/certs/cert.pem;
     ssl_certificate_key /etc/nginx/certs/key.pem;
-    auth_basic "Authentication Required";
-    auth_basic_user_file /etc/nginx/.htpasswd;
+
+    # use either auth_basic or auth_ldap
+    include /etc/nginx/nginx_auth_rt.conf;
 
     location = /favicon.ico {
       alias /etc/nginx/favicon.ico;
