--- a/docker-compose-standalone.yml
+++ b/docker-compose-standalone.yml
@@ -6,7 +6,8 @@ version: '3.7'
 # Commonly tweaked configuration options
 #-------------------------------------------------------------------------------
 x-auth-variables: &auth-variables
-  NGINX_LDAP_AUTH : 'false'
+  # authentication method: encrypted HTTP basic authentication ('true') vs LDAP ('false')
+  NGINX_BASIC_AUTH : 'true'
 
 x-moloch-variables: &moloch-variables
   MANAGE_PCAP_FILES : 'false'
@@ -329,6 +330,7 @@ services:
     restart: "no"
     hostname: htadmin
     environment:
+      << : *auth-variables
       VIRTUAL_HOST : 'htadmin.malcolm.local'
     expose:
       - 80
