--- a/htadmin/supervisord.conf
+++ b/htadmin/supervisord.conf
@@ -21,6 +21,7 @@ command=php-fpm7.3 -F -R -g /var/run/php-fpm.pid
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
+autostart=%(ENV_NGINX_BASIC_AUTH)s
 
 [program:nginx]
 command=/bin/bash -c "sleep 10 && nginx -g \"daemon off;\""
@@ -30,3 +31,4 @@ killasgroup=true
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
+autostart=%(ENV_NGINX_BASIC_AUTH)s
